--- a/javascript/script12.html
+++ b/javascript/script12.html
@@ -38,7 +38,8 @@
         <p class="resu">Resultado:</p>
 
     </div>
+    <p>Agora são: <span class="hor"></span></p>
 
-    <script src="script13.js"></script>
+    <script src="script14.js"></script>
 </body>
 </html>
