--- a/javascript/skils.html
+++ b/javascript/skils.html
@@ -98,7 +98,7 @@
             <h4>Calculador web</h4>
             <div class="Calculador">
                 <input type="number" name="valor" id="valores" class="input" >
-                <input type="button" value="+" onclick="adicionar()">
+                <input type="button" value="×" id="multi" onclick="adicionar()">
                 <input type="number" name="valor2" id="valores2" class="input" >
                 <input type="button" value="Calcular" class="input"  onclick="calcular()" >
             </div>
