--- a/javascript/tab.html
+++ b/javascript/tab.html
@@ -29,7 +29,8 @@
             </select>
             <input type="number" name="mero" id="valor2" size="12">
             <input type="button" value="Calcular" onclick="cal()">
-            <select name="res" id="tudo" size=""></select>
+            <select name="res" id="tudo" size="10" ></select>
+            <p class="tudo"></p>
         </div>
     </div>
 
